# platformer

./: .gitignore  readme.md
src/: CMakeLists.txt  Makefile  animation.c  animation.h  build.sh  configure.sh  entity.c  entity.h  header.h  main.c  player.c  player.h  run.sh  tiles.c  tiles.h
